@@ -1,6 +1,7 @@
 === 2016-06-29
 * Enhancements
   * Added ability to locate div by the contained text
+  * Added #attach_to_window so a page object can operate on another window
 === 2016-06-21
 * Enhancements
   * Handling popups
